<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Semantic Scuttle Jar</string>
    
    <string name="list_menu_preferences">Settings</string>
    <string name="list_menu_refresh">Refresh</string>
    <string name="list_menu_tags">Tags</string>
    <string name="list_menu_add">Add</string>

    <string name="preferences_label">Semantic Scuttle Jar Preferences</string>
    
    <string name="preference_url_title">Semantic Scuttle URL</string>
    <string name="preference_url_summary">The base URL to access Semantic Scuttle</string>
    
    <string name="preference_username_title">Semantic Scuttle Username</string>
    <string name="preference_username_summary">The username you use to login to Semantic Scuttle</string>
    
    <string name="preference_password_title">Semantic Scuttle Password</string>
    <string name="preference_password_summary">The password you use to login to Semantic Scuttle</string>

    <string name="preference_acceptAllSSLCerts_title">Accept all SSL Certs</string>
    <string name="preference_acceptAllSSLCerts_summary">Do you use a self-signed cert? WARNING: Makes you vulnerable to man in the middle attacks!</string>
    
    
	<string name="addbookmark_label">Semantic Scuttle Jar - Add Bookmark</string>
	<string name="addbookmark_url_label">URL:</string>
	<string name="addbookmark_description_label">Description:</string>
	<string name="addbookmark_tags_label">Tags:</string>
	<string name="addbookmark_savebutton_label">Add Bookmark</string>
	<string name="addbookmark_status_label">Privacy:</string>
	<string name="addbookmark_status_prompt">Select Privacy Status</string>
	<string-array name="status_options">
		<item>Public</item>
		<item>Shared with Watched List</item>
		<item>Private</item>
	</string-array>
	<string name="addbookmark_saved">Bookmark saved</string>

	<string name="tagslist_title">Tag List</string>
	<string name="tagslist_notags">No Tag (show all bookmarks)</string>
	<string name="tagslist_loading">Loading tags…</string>
	
	<string name="postlist_loading">Loading bookmarks…</string>
	
    <string-array name="pref_accept_all_SSL_certs_values">
        <item>no</item><item>yes</item>
    </string-array>
    <string-array name="pref_accept_all_SSL_certs_labels">
        <item>No</item><item>Yes</item>
    </string-array>
    
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="share_via">Share via</string>
    <string name="choose_action">Choose an action</string>
    
    <string name="delbookmark_title">Delete bookmark</string>
    <string name="delbookmark_msg">Choose Yes or No</string>
    <string name="delbookmark_yes">Yes</string>
    <string name="delbookmark_no">No</string>
    <string name="delbookmark_deleted">bookmark deleted</string>

    <string name="error_authentication">Username and/or password is incorrect.</string>
    <string name="error_timeout">The server was too long to answer.</string>
    <string name="error_filenotfound">Unable to load URL.  Please check your URL in the Settings.</string>
    <string name="error_urlrequired">URL is required</string>
    <string name="error_descrequired">Description is required</string>
    <string name="error_saving">Error saving bookmark:</string>
</resources>
