<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent" 
   	android:orientation="vertical">
		<TextView
			android:text="@string/addbookmark_url_label"
			android:layout_width="fill_parent"
       		android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/addbookmark_url"
			android:inputType="textUri"
       		android:singleLine="true"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"/>
		<TextView
			android:text="@string/addbookmark_description_label"
			android:layout_width="fill_parent"
       		android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/addbookmark_description"
			android:inputType="text"
			android:singleLine="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<TextView
			android:text="@string/addbookmark_tags_label"
			android:layout_width="fill_parent"
       		android:layout_height="wrap_content"/>
		<EditText
			android:id="@+id/addbookmark_tags"
			android:inputType="text|textNoSuggestions"
       		android:singleLine="true"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"/>
		<TextView
			android:text="@string/addbookmark_status_label"
			android:layout_width="fill_parent"
       		android:layout_height="wrap_content"/>
	    <Spinner 
	        android:id="@+id/addbookmark_status"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/addbookmark_status_prompt"/>
		<Button
	        android:id="@+id/addbookmark_btnsave"
	        android:text="@string/addbookmark_savebutton_label"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
</LinearLayout>
	
